# lumen-browser

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerFlags.cmake  CopyResources.cmake  FindCEF.cmake
docs/: index.html  preview.html
resources/filter-lists/: easylist.txt  trackers.txt
resources/settings/: onboarding.css  onboarding.html  settings.css  settings.html  settings.js
resources/themes/default/: theme.json
resources/ui/: newtab.css  newtab.html  sidebar.css  sidebar.html  sidebar.js  toolbar.css  toolbar.html  toolbar.js
src/: main.cpp  subprocess_main.cpp
src/core/: BrowserProcess.cpp  BrowserProcess.h  LumenApp.cpp  LumenApp.h  LumenClient.cpp  LumenClient.h  LumenRendererApp.cpp  LumenRendererApp.h
src/features/allocator/: LumenMemoryResource.h
src/features/performance/: PerformanceMode.cpp  PerformanceMode.h
src/network/: LumenSchemeHandler.cpp  LumenSchemeHandler.h  LumenSchemeHandlerFactory.cpp  LumenSchemeHandlerFactory.h  RequestHandler.cpp  RequestHandler.h
src/settings/: SettingsHandler.cpp  SettingsHandler.h
src/themes/: ThemeConfig.h  ThemeEngine.cpp  ThemeEngine.h  ThemeInjector.cpp  ThemeInjector.h
src/ui/: BrowserView.cpp  BrowserView.h  ChromeOverlay.cpp  ChromeOverlay.h  MainWindow.cpp  MainWindow.h  Tab.h  TabManager.cpp  TabManager.h
tauri-app/: package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: browser.rs  main.rs
tauri-app/ui/: lumen-api.js  newtab.html  toolbar.html
